[package]
name = "discord-guild-crawler"
version = "0.1.2"
authors = ["Mubelotix <mubelotix@gmail.com>"]
edition = "2018"

[dependencies]
discord-finder = "0.1"
clap = "2.33"
meilisearch-sdk = "0.1"
pkg-version = "1.0"
serde = {version="1.0", features=["derive"]}
serde_cbor = "0.11"
progress_bar = "0.1"